--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 		#yellow{
-            background: yellow;  border-width: 1px;  border-color: green;
+            background: yellow;  border-width: 1px; border-style: solid; border-color: green;
         }
         #red{
-            background: red;  border-width: 1px;  border-color: black;
+            background: red;  border-width: 1px;  border-style: solid; border-color: black;
         }
         #green{
-             background: green;  border-width: 1px;  border-color: yellow;
+             background: green;  border-width: 1px; border-style: solid;  border-color: yellow;
         }
 /*  your css code here. If applicable */
